@@ -58,7 +58,6 @@ GList         *na_object_item_get_items( const NAObjectItem *item );
 guint          na_object_item_get_items_count( const NAObjectItem *item );
 void           na_object_item_free_items( GList *items );
 
-void           na_object_item_set_new_uuid( NAObjectItem *item );
 void           na_object_item_set_tooltip( NAObjectItem *item, const gchar *tooltip );
 void           na_object_item_set_icon( NAObjectItem *item, const gchar *icon_name );
 void           na_object_item_set_enabled( NAObjectItem *item, gboolean enabled );
